@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-17T08:15:12Z",
-  "count_outdated" : 339,
-  "uniques_outdated" : 182,
-  "count" : 368,
-  "uniques" : 199,
+  "timestamp" : "2022-06-18T01:00:24Z",
+  "count_outdated" : 341,
+  "uniques_outdated" : 183,
+  "count" : 370,
+  "uniques" : 200,
   "clones" : [
-    {
-      "timestamp": "2022-06-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-04T00:00:00Z",
       "count": 2,
@@ -100,6 +93,13 @@
       "timestamp": "2022-06-16T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
