@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2022-06-03T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-04T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -70,6 +65,11 @@
     {
       "timestamp": "2022-06-16T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-17T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
